# combinatorics

./: AGENT.md  Cargo.toml  README.md
src/: lib.rs  topology.rs
