[package]
name = "combinatorics-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/combinatorics"
description = "Combinatorics in Rust — counting, Burnside's lemma, Catalan numbers, generating functions, graph enumeration"

[dependencies]
nalgebra = "0.35"
serde = { version = "1", features = ["derive"] }
